tests/NormalTests/paczka1/small_fuzzy/25737222.err
Error in line 5: lao A821 80,0
Error in line 6: lao A711 6,5
